--- a/presentation/src/main/res/layout/activity_auth.xml
+++ b/presentation/src/main/res/layout/activity_auth.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".AuthActivity">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints">
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
