--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Theme.Linksy" parent="Base.Theme.Linksy" />
