--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Linksy" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textAllCaps">false</item>
     </style>
