--- a/presentation/src/main/res/layout/fragment_registration.xml
+++ b/presentation/src/main/res/layout/fragment_registration.xml
@@ -8,9 +8,35 @@
 
     tools:context=".RegistrationFragment">
 
+<com.google.android.material.textview.MaterialTextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/sign_up"
+  style="@style/TextTitleStyle"
+  >
+</com.google.android.material.textview.MaterialTextView>
 
+    <EditText
+        android:layout_marginTop="20dp"
+        style="@style/EditTextStyle"
+        android:hint="@string/hint_username">
+    </EditText>
 
+    <EditText
+        android:layout_marginTop="10dp"
+        style="@style/EditTextStyle"
+        android:hint="@string/hint_email">
 
+    </EditText>
+    <EditText
+        android:layout_marginTop="10dp"
+        style="@style/EditTextStyle"
+        android:hint="@string/hint_password">
 
-
+    </EditText>
+    <EditText
+        android:layout_marginTop="10dp"
+        style="@style/EditTextStyle"
+        android:hint="@string/hint_confirm_password">
+    </EditText>
 </LinearLayout>
