--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#334d5c</color>
-    <color name="edit_text_default_color">#9A9696</color>
+    <color name="edit_text_background_default_color">#ECECEC</color>
+    <color name="edit_text_hint_color">#737373</color>
 </resources>
