--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -14,5 +14,21 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
+    <style name="EditTextStyle" >
+        <item name="android:fontFamily">@font/klukva</item>
+        <item name="android:background">@drawable/rounded_edit_text</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/edit_text_hint_color</item>
+    </style>
 
+
+    <style name="TextTitleStyle" >
+        <item name="android:fontFamily">@font/klukva</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
