--- a/presentation/src/main/res/layout/activity_auth.xml
+++ b/presentation/src/main/res/layout/activity_auth.xml
@@ -9,12 +9,13 @@
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+       android:paddingHorizontal="10dp"
+      android:paddingTop="10dp"
         tools:ignore="MissingConstraints">
     </FrameLayout>
 
