--- a/presentation/src/main/res/layout/fragment_registration.xml
+++ b/presentation/src/main/res/layout/fragment_registration.xml
@@ -11,7 +11,7 @@
 <com.google.android.material.textview.MaterialTextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/sign_up"
+    android:text="@string/sign_up_title"
   style="@style/TextTitleStyle"
   >
 </com.google.android.material.textview.MaterialTextView>
@@ -19,24 +19,60 @@
     <EditText
         android:layout_marginTop="20dp"
         style="@style/EditTextStyle"
+        android:inputType=""
         android:hint="@string/hint_username">
     </EditText>
 
     <EditText
         android:layout_marginTop="10dp"
         style="@style/EditTextStyle"
+        android:inputType="textEmailAddress"
         android:hint="@string/hint_email">
 
     </EditText>
     <EditText
         android:layout_marginTop="10dp"
         style="@style/EditTextStyle"
+        android:inputType="textPassword"
         android:hint="@string/hint_password">
 
     </EditText>
     <EditText
         android:layout_marginTop="10dp"
         style="@style/EditTextStyle"
+        android:inputType="textPassword"
         android:hint="@string/hint_confirm_password">
     </EditText>
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/sign_up_button">
+
+    </com.google.android.material.button.MaterialButton>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal" >
+    <com.google.android.material.textview.MaterialTextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       style="@style/TextQuestionStyle"
+        android:text="@string/question_have_an_account">
+
+    </com.google.android.material.textview.MaterialTextView>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextLinkStyle"
+            android:text="@string/login_button">
+
+        </com.google.android.material.textview.MaterialTextView>
+    </LinearLayout>
 </LinearLayout>
