--- a/presentation/src/main/res/layout/fragment_registration.xml
+++ b/presentation/src/main/res/layout/fragment_registration.xml
@@ -16,15 +16,15 @@
 
     <EditText
         android:id="@+id/et_username"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         style="@style/EditTextStyle"
-        android:inputType=""
+        android:inputType="text"
         android:hint="@string/hint_username">
     </EditText>
 
     <EditText
         android:id="@+id/et_email"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         style="@style/EditTextStyle"
         android:inputType="textEmailAddress"
         android:hint="@string/hint_email">
@@ -33,7 +33,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
       >
 
         <EditText
@@ -62,7 +62,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp">
 
         <EditText
             android:id="@+id/et_confirm_password"
@@ -89,7 +89,8 @@
         android:id="@+id/bt_sign_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:enabled="false"
+        android:layout_marginTop="25dp"
         android:text="@string/sign_up_button">
 
     </com.google.android.material.button.MaterialButton>
@@ -97,7 +98,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal" >
     <com.google.android.material.textview.MaterialTextView
 
