--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#334d5c</color>
-    <color name="edit_text_background_default_color">#ECECEC</color>
+    <color name="edit_text_background_default_color">#F3F3F3</color>
     <color name="edit_text_hint_color">#737373</color>
     <color name="question">#555555</color>
     <color name="link">#137EB3</color>
