--- a/presentation/src/main/res/layout/activity_auth.xml
+++ b/presentation/src/main/res/layout/activity_auth.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthActivity">
+    tools:context=".ui.AuthActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
