--- a/presentation/src/main/res/layout/fragment_login.xml
+++ b/presentation/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".RegistrationFragment">
+    tools:context=".ui.LoginFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
