--- a/presentation/src/main/res/layout/fragment_registration.xml
+++ b/presentation/src/main/res/layout/fragment_registration.xml
@@ -44,15 +44,9 @@
         </EditText>
 
         <ImageView
-            android:id="@+id/iv_password_show"
+            android:id="@+id/iv_password_change_input_type"
             style="@style/ButtonInEditTextStyle"
-            android:background="@drawable/show_password"
-            />
-
-        <ImageView
-            android:id="@+id/iv_password_hide"
-             style="@style/ButtonInEditTextStyle"
-            android:background="@drawable/hide_password"
+            android:src="@drawable/show_password"
             />
     </RelativeLayout>
 
@@ -71,16 +65,11 @@
             android:hint="@string/hint_confirm_password">
         </EditText>
         <ImageView
-            android:id="@+id/iv_passwordc_show"
+            android:id="@+id/iv_password_confirm_change_input_type"
             style="@style/ButtonInEditTextStyle"
-            android:background="@drawable/show_password"
+            android:src="@drawable/show_password"
             android:contentDescription="TODO" />
 
-        <ImageView
-            android:id="@+id/iv_passwordc_hide"
-            style="@style/ButtonInEditTextStyle"
-            android:background="@drawable/hide_password"
-            android:contentDescription="TODO" />
 
     </RelativeLayout>
 
