added a function to change the background color of the edit text as well as the processing of the button in case of a mismatch of passwords during registration

--- a/presentation/src/main/res/layout/fragment_login.xml
+++ b/presentation/src/main/res/layout/fragment_login.xml
@@ -37,9 +37,9 @@
         </EditText>
 
         <ImageView
-            android:id="@+id/iv_password_show"
+            android:id="@+id/iv_password_change_input_type"
             style="@style/ButtonInEditTextStyle"
-            android:background="@drawable/show_password"
+            android:src="@drawable/show_password"
             />
 
     </RelativeLayout>
