--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#334d5c</color>
     <color name="edit_text_background_default_color">#F3F3F3</color>
+    <color name="edit_text_background_error_color">#F19B9B</color>
     <color name="edit_text_hint_color">#737373</color>
     <color name="question">#555555</color>
     <color name="link">#137EB3</color>
