--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".ui.PasswordRecoveryFragment">
+    tools:context="com.emil.linksy.presentation.ui.PasswordRecoveryFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
