--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,19 @@
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
     </style>
 
+    <style name="CodeEditTextStyle" >
+        <item name="android:background">@drawable/rounded_edit_text</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/edit_text_hint_color</item>
+        <item name="android:maxLength">1</item>
+        <item name="android:inputType">number</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
 
     <style name="TextTitleStyle" >
         <item name="android:fontFamily">@font/klukva</item>
@@ -54,7 +67,19 @@
         <item name="android:layout_width">25dp</item>
         <item name="android:layout_height">25dp</item>
         <item name="android:layout_alignParentEnd">true</item>
-
         <item name="android:layout_margin">7dp</item>
+    </style>
+    <style name="BottomSheetDialogTheme" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
+    <style name="AppModalStyle" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="android:background">@drawable/bottom_sheet_rounded</item>
+    </style>
+
+    <style name="Widget.Linksy.BottomSheetButton" parent="Theme.Linksy">
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+
     </style>
 </resources>
