--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,7 +29,7 @@
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/code_edit_text</item>
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
         <item name="android:maxLength">1</item>
         <item name="android:inputType">number</item>
@@ -60,6 +60,7 @@
     <style name="TextErrorStyle" >
         <item name="android:textColor">@color/textView_error_message</item>
         <item name="android:visibility">gone</item>
+        <item name="android:layout_marginTop">1dp</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -78,8 +79,5 @@
         <item name="android:background">@drawable/bottom_sheet_rounded</item>
     </style>
 
-    <style name="Widget.Linksy.BottomSheetButton" parent="Theme.Linksy">
-        <item name="android:colorPrimary">@color/colorPrimary</item>
 
-    </style>
 </resources>
