--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.RegistrationFragment">
 
+
 <com.google.android.material.textview.MaterialTextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -29,6 +30,7 @@
         android:inputType="textEmailAddress"
         android:hint="@string/hint_email">
     </EditText>
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_error_email_exist"
         android:layout_width="wrap_content"
@@ -113,11 +115,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:enabled="false"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:text="@string/sign_up_button">
 
     </com.google.android.material.button.MaterialButton>
-
+    <com.emil.linksy.presentation.custom_view.CustomProgressBar
+        android:id="@+id/cpb_loading"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:layout_gravity="center">
+    </com.emil.linksy.presentation.custom_view.CustomProgressBar>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
