--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -115,7 +115,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:enabled="false"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="@string/sign_up_button">
 
     </com.google.android.material.button.MaterialButton>
@@ -123,14 +123,14 @@
         android:id="@+id/cpb_loading"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:visibility="gone"
+   android:visibility="gone"
+        android:layout_marginVertical="5dp"
         android:layout_gravity="center">
     </com.emil.linksy.presentation.custom_view.CustomProgressBar>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal" >
+        android:layout_marginTop="15dp" >
     <com.google.android.material.textview.MaterialTextView
 
         android:layout_width="wrap_content"
@@ -145,7 +145,6 @@
             style="@style/TextLinkStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_marginStart="5dp"
             android:text="@string/login_button">
 
