--- a/app/src/main/res/layout/bottom_sheet_confirm_code.xml
+++ b/app/src/main/res/layout/bottom_sheet_confirm_code.xml
@@ -111,6 +111,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
+                android:alpha= "0.5"
+                app:backgroundTint="@color/colorPrimary"
+                android:textColor="@color/white"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:text="@string/resend">
             </com.google.android.material.button.MaterialButton>
@@ -120,6 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/red"
+            android:textColor="@color/white"
             android:background="@android:drawable/dialog_holo_light_frame"
             android:text="@string/cancel">
 
