--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,15 @@
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
     </style>
 
+    <style name="LandscapeEditTextStyle" >
+        <item name="android:fontFamily">@font/klukva</item>
+        <item name="android:background">@drawable/rounded_edit_text</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/edit_text_hint_color</item>
+    </style>
+
     <style name="CodeEditTextStyle" >
         <item name="android:background">@drawable/rounded_edit_text</item>
         <item name="android:layout_marginLeft">5dp</item>
