deleted the extra imports and changed toast "User not found" to TextView

--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="@string/password_recovery_title"
         style="@style/TextTitleStyle">
     </com.google.android.material.textview.MaterialTextView>
@@ -17,6 +18,7 @@
         android:id="@+id/ll_request_password_change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
     <EditText
         android:id="@+id/et_email"
@@ -25,7 +27,13 @@
         android:inputType="textEmailAddress"
         android:hint="@string/hint_email">
     </EditText>
-
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_user_not_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextErrorStyle"
+            android:text="@string/user_not_found">
+        </com.google.android.material.textview.MaterialTextView>
     <include
         android:id="@+id/tv_error_isNotMail"
         layout="@layout/invalid_email_format_text"
