Created a User Activity and redirected to Login Fragment upon successful registration with the output of the corresponding notification

--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -83,7 +83,7 @@
             android:id="@+id/et_code"
             android:layout_marginTop="20dp"
             style="@style/EditTextStyle"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:hint="@string/code">
         </EditText>
         <com.google.android.material.textview.MaterialTextView
