--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textAllCaps">false</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="Theme.Linksy" parent="Base.Theme.Linksy" />
