--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -95,5 +95,11 @@
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_gravity">center</item>
     </style>
+    <style name="LoadingDialog" parent="Theme.Material3.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 
+    <style name="RoundedDialog" parent="Theme.Material3.Light.Dialog">
+        <item name="android:windowBackground">@drawable/rounded_dialog</item>
+    </style>
 </resources>
