replaced the icons in the navigation and in the show/hide password buttons

--- a/app/src/main/res/drawable/ic_channel.xml
+++ b/app/src/main/res/drawable/ic_channel.xml
@@ -1,10 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
+    android:width="426.67dp"
+    android:height="426.67dp"
+    android:viewportWidth="426.67"
+    android:viewportHeight="426.67">
   <path
       android:fillColor="#FF000000"
-      android:pathData="m256,428.19a207.42,207.42 0,0 1,-137.69 -52.01c11.29,-66.96 69.9,-117.03 137.69,-117.03 67.82,0 126.43,50.08 137.7,117.06a207.67,207.67 0,0 1,-137.7 51.98zM512,337.15c-7.97,-44.13 -46.8,-77 -91.66,-77a92.04,92.04 0,0 0,-63.31 25.04,153.5 153.5,0 0,1 48.45,85.36 145.24,145.24 0,0 0,14.86 0.78,139.43 139.43,0 0,0 91.66,-34.18zM369.33,191.67a51.01,51.01 0,1 1,51.01 51,51.06 51.06,0 0,1 -51.01,-51zM178.2,161.6a77.79,77.79 0,1 1,77.79 77.79,77.88 77.88,0 0,1 -77.79,-77.79zM40.66,191.67a51,51 0,1 1,51 51,51.05 51.05,0 0,1 -51,-51zM91.66,260.15c-44.84,0 -83.67,32.86 -91.66,76.99a139.44,139.44 0,0 0,91.66 34.19,145.24 145.24,0 0,0 14.86,-0.78 153.56,153.56 0,0 1,48.45 -85.36,92.04 92.04,0 0,0 -63.31,-25.04z"
-      android:fillType="evenOdd"/>
+      android:pathData="M341.33,149.33l-64,0l0,-64l-64,42.67l-64,-42.67l0,64l-64,0l42.67,64l-42.67,64l64,0l0,64l64,-42.67l64,42.67l0,-64l64,0l-42.67,-64z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M213.33,42.67m-42.67,0a42.67,42.67 0,1 1,85.33 0a42.67,42.67 0,1 1,-85.33 0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M213.33,384m-42.67,0a42.67,42.67 0,1 1,85.33 0a42.67,42.67 0,1 1,-85.33 0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M384,213.33m-42.67,0a42.67,42.67 0,1 1,85.33 0a42.67,42.67 0,1 1,-85.33 0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M42.67,213.33m-42.67,0a42.67,42.67 0,1 1,85.33 0a42.67,42.67 0,1 1,-85.33 0"/>
 </vector>
