--- a/app/src/main/res/drawable/ic_friend.xml
+++ b/app/src/main/res/drawable/ic_friend.xml
@@ -1,18 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="511dp"
-    android:viewportWidth="512"
-    android:viewportHeight="511">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
       android:fillColor="#FF000000"
-      android:pathData="m460.8,204.53c0,70.69 -57.31,128 -128,128 -70.69,0 -128,-57.31 -128,-128 0,-70.7 57.31,-128 128,-128 70.69,0 128,57.3 128,128zM460.8,204.53"/>
+      android:pathData="M9,7m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="m332.8,358.13c-76.8,0 -179.2,51.2 -179.2,115.2 0,7.07 5.73,12.8 12.8,12.8h332.8c7.07,0 12.8,-5.73 12.8,-12.8 0,-64 -102.4,-115.2 -179.2,-115.2zM332.8,358.13"/>
+      android:pathData="m15,17v1a3.009,3.009 0,0 1,-3 3h-6a3.009,3.009 0,0 1,-3 -3v-1a5,5 0,0 1,5 -5h2a5,5 0,0 1,5 5z"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="m179.2,281.33c6.57,-0.15 13.11,-0.82 19.58,-1.98 -41.39,-73.81 -15.11,-167.21 58.71,-208.59 4.3,-2.41 8.72,-4.62 13.24,-6.61 -49.3,-50.6 -130.29,-51.64 -180.88,-2.34 -50.59,49.3 -51.64,130.29 -2.34,180.88 24.1,24.73 57.17,38.67 91.7,38.65zM179.2,281.33"/>
+      android:pathData="M17,8m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="m265.86,342.56c-15.68,-7.59 -29.95,-17.78 -42.23,-30.14 -14.58,-3.39 -29.47,-5.23 -44.43,-5.49 -76.8,0 -179.2,51.2 -179.2,115.2 0,7.07 5.73,12.8 12.8,12.8h124.02c20.45,-44.7 74.34,-77.07 129.04,-92.37zM265.86,342.56"/>
+      android:pathData="m21,15v1a2.006,2.006 0,0 1,-2 2h-2v-1a6.955,6.955 0,0 0,-1.95 -4.84,3.005 3.005,0 0,1 0.95,-0.16h2a3.009,3.009 0,0 1,3 3z"/>
 </vector>
