--- a/app/src/main/res/drawable/ic_profile.xml
+++ b/app/src/main/res/drawable/ic_profile.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="64dp"
-    android:height="64dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
       android:fillColor="#FF000000"
-      android:pathData="m24,9c-8.82,0 -16,7.18 -16,16s7.18,16 16,16 16,-7.18 16,-16 -7.18,-16 -16,-16zM24,14c3.31,0 6,2.69 6,6s-2.69,6 -6,6 -6,-2.69 -6,-6 2.69,-6 6,-6zM34.57,32.54c-2.43,3.42 -6.38,5.46 -10.57,5.46s-8.14,-2.04 -10.57,-5.46c-0.29,-0.4 -0.24,-0.95 0.11,-1.3 2.82,-2.73 6.53,-4.24 10.46,-4.24 2.47,0 4.91,0.61 7.05,1.76 1.25,0.66 2.4,1.5 3.41,2.49 0.35,0.34 0.4,0.8 0.11,1.29z"/>
+      android:pathData="m12,2a9.992,9.992 0,0 0,-5.97 18.01,9.965 9.965,0 0,0 11.95,0 10,10 0,0 0,-5.98 -18.01zM12,6a3,3 0,1 1,-3 3,3.009 3.009,0 0,1 3,-3zM12,20a7.989,7.989 0,0 1,-5.54 -2.24,5.975 5.975,0 0,1 11.09,-0.02 7.943,7.943 0,0 1,-5.55 2.26z"/>
 </vector>
