--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile"/>
+        android:icon="@drawable/ic_feed"
+        android:title="@string/feed"/>
     <item
         android:id="@+id/page_2"
         android:enabled="true"
@@ -23,7 +24,7 @@
     <item
         android:id="@+id/page_5"
         android:enabled="true"
-        android:icon="@drawable/ic_setting"
-        android:title="@string/settings"/>
+        android:icon="@drawable/ic_profile"
+        android:title="@string/profile"/>
 
 </menu>
