--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/page_feed"
         android:enabled="true"
         android:icon="@drawable/ic_feed"
         android:title="@string/feed"/>
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/page_channels"
         android:enabled="true"
         android:icon="@drawable/ic_channel"
         android:title="@string/channels"/>
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/page_chats"
         android:enabled="true"
         android:icon="@drawable/ic_chat"
         android:title="@string/chats"/>
     <item
-        android:id="@+id/page_4"
+        android:id="@+id/page_friends"
         android:enabled="true"
         android:icon="@drawable/ic_friend"
         android:title="@string/friends"/>
     <item
-        android:id="@+id/page_5"
+        android:id="@+id/page_profile"
         android:enabled="true"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile"/>
