--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -6,23 +6,27 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.PasswordRecoveryFragment">
-
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
+    <Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/password_recovery_title"
+            style="@style/TextTitleStyle">
+        </com.google.android.material.textview.MaterialTextView>
+    </Toolbar>
 
-        android:text="@string/password_recovery_title"
-        style="@style/TextTitleStyle">
-    </com.google.android.material.textview.MaterialTextView>
     <LinearLayout
         android:id="@+id/ll_request_password_change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
     <EditText
         android:id="@+id/et_email"
-        android:layout_marginTop="20dp"
         style="@style/EditTextStyle"
         android:inputType="textEmailAddress"
         android:hint="@string/hint_email">
