--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -3,23 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.RegistrationFragment">
 
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up_title"
+            style="@style/TextTitleStyle">
+        </com.google.android.material.textview.MaterialTextView>
+    </Toolbar>
 
-<com.google.android.material.textview.MaterialTextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/sign_up_title"
-  style="@style/TextTitleStyle">
-</com.google.android.material.textview.MaterialTextView>
 
     <EditText
         android:id="@+id/et_username"
-        android:layout_marginTop="25dp"
         style="@style/EditTextStyle"
+        android:layout_marginTop="10dp"
         android:inputType="text"
         android:hint="@string/hint_username">
     </EditText>
