--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,11 @@
     <color name="red">#8F2121</color>
     <color name="neutral">#285F85</color>
     <color name="gray">#777676</color>
+    <color name="soft_gray">#E8E8E8</color>
+    <color name="layout_main">#F3F0F0</color>
+    <color name="username_text">#062D40</color>
+    <color name="tabIndicatorColor">#BD4722</color>
+    <color name="tabSelectedTextColor">#000000</color>
+    <color name="tabTextColor">#888787</color>
+
 </resources>
