--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Base.Theme.Linksy" parent="Theme.MaterialComponents.DayNight">
+    <style name="Base.Theme.Linksy" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="android:textColor">@color/black</item>
@@ -101,5 +101,22 @@
 
     <style name="RoundedDialog" parent="Theme.Material3.Light.Dialog">
         <item name="android:windowBackground">@drawable/rounded_dialog</item>
+    </style>
+
+    <style name="ButtonProfile" parent="Widget.Material3.Button">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/klukva</item>
+    </style>
+    <style name="TabTextStyle">
+        <item name="textAllCaps">false</item>
+        <item name="tabTextColor">@color/black</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="CustomTabLayoutStyle" parent="Widget.Material3.TabLayout">
+        <item name="tabTextAppearance">@style/TabTextStyle</item>
+        <item name="tabTextColor">@color/tabTextColor</item>
+        <item name="tabSelectedTextColor">@color/tabSelectedTextColor</item>
+        <item name="tabIndicatorColor">@color/tabIndicatorColor</item>
     </style>
 </resources>
