--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,18 +9,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="15sp"
-                android:textColor="@color/username_text"
-                android:textStyle="bold"
-                android:text="Username">
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:alpha="0.5"
+            android:background="@color/shimmerBackground"
 
-            </com.google.android.material.textview.MaterialTextView>
+            >
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="15sp"
+            android:textColor="@color/username_text"
+            android:visibility="invisible"
+            android:textStyle="bold"
+            android:text="Username">
 
+        </com.google.android.material.textview.MaterialTextView>
+        </com.facebook.shimmer.ShimmerFrameLayout>
     </Toolbar>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,17 +38,26 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="5dp"
         android:paddingVertical="10dp">
-
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:alpha="0.5"
+            android:background="@drawable/shimmer_circle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="MissingConstraints">
         <ImageView
             android:id="@+id/iv_user_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/default_avatar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            android:visibility="invisible"
+            />
+        </com.facebook.shimmer.ShimmerFrameLayout>
         <ImageView
             android:id="@+id/iv_upload_avatar"
             android:layout_width="30dp"
@@ -62,8 +81,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="auto"
-          style="@style/CustomTabLayoutStyle"
-       >
+        style="@style/CustomTabLayoutStyle"
+        >
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,5 +99,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp">
-</FrameLayout>
+    </FrameLayout>
 </LinearLayout>
