added a fragment for editing profile data

--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.PasswordRecoveryFragment">
-    <Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
@@ -16,7 +16,7 @@
             android:text="@string/password_recovery_title"
             style="@style/TextTitleStyle">
         </com.google.android.material.textview.MaterialTextView>
-    </Toolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <LinearLayout
         android:id="@+id/ll_request_password_change"
