--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -5,7 +5,7 @@
     tools:context="com.emil.linksy.presentation.ui.FeedFragment">
 
 
-    <Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
@@ -25,6 +25,6 @@
             </TextView>
 
         </LinearLayout>
-    </Toolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
 </FrameLayout>
