--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -2,70 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+android:gravity="center_horizontal"
     tools:context="com.emil.linksy.presentation.ui.PostFragment">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:paddingVertical="10dp"
-        android:background="@drawable/rounded_layout"
-        android:paddingHorizontal="5dp"
-        android:orientation="vertical">
-
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:text="New post"
-            android:textColor="@color/gray">
-
-        </com.google.android.material.textview.MaterialTextView>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:paddingBottom="20dp"
-            android:paddingHorizontal="10dp"
-            android:paddingTop="10dp"
-            android:textColor ="@color/black"
-            android:textColorHint = "@color/edit_text_hint_color"
-            android:fontFamily="@font/klukva"
-            android:background="@drawable/rounded_post_edit_text"
-            android:hint="Write text...">
-
-        </EditText>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:orientation="horizontal">
-
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_attach"
-                >
-
-            </ImageView>
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/ButtonProfile"
-
-                android:backgroundTint="@color/neutral"
-                android:text="Publish">
-
+                android:backgroundTint="@color/newPost_button"
+                android:drawableLeft="@drawable/ic_add_post"
+                android:text="Добавить пост">
             </Button>
-        </LinearLayout>
-    </LinearLayout>
+
+
 
 
 </LinearLayout>
