--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,14 +52,14 @@
             tools:ignore="MissingConstraints">
         <ImageView
             android:id="@+id/iv_user_avatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/default_avatar"
             android:visibility="invisible"
             />
         </com.facebook.shimmer.ShimmerFrameLayout>
         <ImageView
-            android:id="@+id/iv_upload_avatar"
+            android:id="@+id/iv_edit_user_data"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_change"
