--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,7 +24,15 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
     </style>
-
+    <style name="EditTextChangeStyle" >
+        <item name="android:fontFamily">@font/klukva</item>
+        <item name="android:background">@drawable/rounded_edit_text_change</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/edit_text_hint_color</item>
+    </style>
     <style name="LandscapeEditTextStyle" >
         <item name="android:fontFamily">@font/klukva</item>
         <item name="android:background">@drawable/rounded_edit_text</item>
@@ -104,7 +112,8 @@
     </style>
 
     <style name="ButtonProfile" parent="Widget.Material3.Button">
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">@font/klukva</item>
     </style>
     <style name="TabTextStyle">
@@ -118,5 +127,10 @@
         <item name="tabTextColor">@color/tabTextColor</item>
         <item name="tabSelectedTextColor">@color/tabSelectedTextColor</item>
         <item name="tabIndicatorColor">@color/tabIndicatorColor</item>
+    </style>
+    <style name="FullScreenDialog" parent="Theme.Material3.Light.Dialog">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 </resources>
